--- a/client/client/Views/Auth/Index.cshtml
+++ b/client/client/Views/Auth/Index.cshtml
@@ -3,24 +3,38 @@
     ViewData["Title"] = "Login";
 }
 
-@* <div class="text-center">
-    <h1 class="display-4">Login</h1>
-    <input form="username" name="userame" placeholder="username"/><br/>
-    <input form="password" name="password" placeholder="password"/><br />
-    <input type="submit" name="Login" />
-</div> *@
+    <link rel="stylesheet" href="~/css/login.css" asp-append-version="true" />
 
-<form method="post">
-    <div>
-        <label asp-for="Username"></label>
-        <input asp-for="Username"/>
+
+<body>
+    <div class="login-container">
+        <div class="login-box">
+            <div class="logo">
+                <img src="img/logo_full_no_nome.svg" alt="Logo">
+            </div>
+            <form method="post">
+                <label asp-for="Username">Nome utente</label>
+                <input asp-for="Username" class="entry" type="text" id="username" name="username">
+
+                <label asp-for="Password">Password</label>
+                <input asp-for="Password" class="entry" type="password" id="password" name="password">
+
+                <div class="remember-me">
+                    <div class="checkbox-container">
+                        <input type="checkbox" id="remember" name="remember">
+                        <label for="remember">Ricordami</label>
+                    </div>
+                    <button type="submit" asp-action="Login" class="login-button">Accedi</button>
+                </div>
+
+                <div class="register-link">
+                    Non hai ancora un account? <a asp-action="SignUp">Registrati</a>
+                </div>
+            </form>
+        </div>
     </div>
-    <div>
-        <label asp-for="Password"></label>
-        <input asp-for="Password" type="password"/>
-    </div>
-    <button type="submit" asp-action="Login">Login</button>
-</form>
+</body>
+</html>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
