--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -2,8 +2,127 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 
 <body>
+    <div class="container-fluid ">
+        <div class="w-25">
+            <button class="btn btn-primary d-md-none m-2 w-25" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+                    aria-controls="offcanvasExample">
+                HAM
+            </button>
+        </div>
+
+
+        <div class="offcanvas offcanvas-start d-md-none bg-black" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+            <div class="offcanvas-header bg-black">
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body bg-black">
+
+                <div class="col-sm sidebar-buttons">
+                    <button class="sidebar-btn" id="chatBtn1">C</button>
+                    <button class="sidebar-btn" id="fileBtn1">F</button>
+                </div>
+                <button class="btn" id="newChatBtnOffcanvas">
+                    <img class="imgLogo" src="/img/Logo_full_no_nome.svg" alt="ㅤ">
+                    Nuova chat
+                </button>
+                <div class="cronologia mt-3" id="chatSection1">
+                    <div class="file">
+                        <button>Saluto generale</button>
+                    </div>
+                    <div class="file">
+                        <button>Saluto generale 2</button>
+                    </div>
+                </div>
+                <div class="files hidden" id="fileSection1">
+                    <div class="file" onclick="openFile('file1.pdf')">
+                        <button>File 1</button>
+                    </div>
+                    <div class="file" onclick="openFile('file2.pdf')">
+                        <button>File 2</button>
+                    </div>
+                    <div class="file" onclick="openFile('file3.pdf')">
+                        <button>File 3</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row no-gutters">
+            <!-- Sidebar -->
+            <div class="col-md p-25 sidebar d-none d-md-block">
+                <div class="newChat file text-center">
+                    <button class="btn" id="newChatBtn">
+                        <img class="imgLogo" src="/img/Logo_full_no_nome.svg" alt="ㅤ">
+                        Nuova chat
+                    </button>
+                </div>
+                <div class="cronologia mt-3" id="chatSection">
+                    <div class="file">
+                        <button>Saluto generale</button>
+                    </div>
+                    <div class="file">
+                        <button>Saluto generale 2</button>
+                    </div>
+                </div>
+                <div class="files hidden" id="fileSection">
+                    <div class="file" onclick="openFile('file1.pdf')">
+                        <button>File 1</button>
+                    </div>
+                    <div class="file" onclick="openFile('file2.pdf')">
+                        <button>File 2</button>
+                    </div>
+                    <div class="file" onclick="openFile('file3.pdf')">
+                        <button>File 3</button>
+                    </div>
+
+                </div>
+                <div class="col-sm sidebar-buttons">
+                    <button class="sidebar-btn" id="chatBtn">C</button>
+                    <button class="sidebar-btn" id="fileBtn">F</button>
+                </div>
+            </div>
+            <!---------------MESSAGGI CHAT--------->
+
+            <div class="col-md-9 d-flex flex-column p-0">
+                <main class="content flex-grow-1">
+                    <div class="chat flex-grow-1 p-3" id="chatSection">
+                        <div class="message d-flex">
+                            <span>ciao, come va?</span>
+                        </div>
+                        <div class="response d-flex justify-content-end">
+                            <span>bene dai, te?</span>
+                        </div>
+                    </div>
+                </main>
+                <footer class="p-3">
+                    <div class="input-container">
+                        <input title="ciao" id="fileInput" type="file" name="files" multiple class="hidden">
+                        <button id="attachButton" class="attach-button" type="button" aria-haspopup="menu"
+                                aria-expanded="false" data-state="closed">
+                            📎
+                        </button>
+                        <input type="text" placeholder="Invia un messaggio" class="input-field" />
+                        <button class="send-button">↥</button>
+                    </div>
+                </footer>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    @* <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script> *@
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <script src="~/js/site.js"></script>
+</body>
+
+@* CODICE VECCHIO DI FOFO *@
+@* <body>
     <div class="container">
         <aside class="sidebar">
             <div class="logo">
@@ -59,4 +178,4 @@
         </main>
     </div>
     <script src="script.js"></script>
-</body>
+</body> *@
