--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -2,8 +2,6 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 
 <body>
@@ -90,14 +88,27 @@
 
             <div class="col-md-9 d-flex flex-column p-0">
                 <main class="content flex-grow-1">
-                    <div class="chat flex-grow-1 p-3" id="chatSection">
-                        <div class="message d-flex">
-                            <span>ciao, come va?</span>
-                        </div>
-                        <div class="response d-flex justify-content-end">
-                            <span>bene dai, te?</span>
-                        </div>
-                    </div>
+                            <div class="chat flex-grow-1 p-3">
+                                @foreach (var chat in Model.Chats)
+                                {
+                                    for (int i = 0; i < chat.Messages.Length; i++)
+                                    {
+                                        var message = chat.Messages[i];
+                                        if (i % 2 == 0) // User message
+                                        {
+                                            <div class="message d-flex">
+                                                <span>@message.Text</span>
+                                            </div>
+                                        }
+                                        else // Bot message
+                                        {
+                                            <div class="response d-flex justify-content-end">
+                                                <span>@message.Text</span>
+                                            </div>
+                                        }
+                                    }
+                                }
+                            </div>
                 </main>
                 <footer class="p-3">
                     <div class="input-container">
