--- a/client/client/Views/Shared/_Layout.cshtml
+++ b/client/client/Views/Shared/_Layout.cshtml
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - client</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="~/client.styles.css" asp-append-version="true"/>
+    @* <link rel="stylesheet" href="~/client.styles.css" asp-append-version="true"/> *@
 </head>
 <body>
 <header>
     
 </header>
-<div class="container">
+@* <div class="container">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
-</div>
+</div> *@
+
+@RenderBody()
 
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
