--- a/client/client/Views/Auth/SignUp.cshtml
+++ b/client/client/Views/Auth/SignUp.cshtml
@@ -10,18 +10,18 @@
             <div class="logo">
                 <img src="~/img/logo_full_no_nome.svg" alt="Logo">
             </div>
-            <form>
+            <form method="post">
                 <label asp-for="Username">Nome utente</label>
                 <input asp-for="Username" class=" entry" type="text" id="username" name="username">
 
                 <label asp-for="EmailAddress">Indirizzo email</label>
-                <input asp-for="EmailAddress" class="entry" type="text" id="Email" name="Email">
+                <input asp-for="EmailAddress" class="entry" type="text" id="EmailAddress" name="EmailAddress">
 
                 <label asp-for="Password">Password</label>
                 <input asp-for="Password" class="entry" type="password" id="password" name="password">
 
                 <div class="register">
-                    <button type="submit" class="registration-button">Registrati</button>
+                    <button type="submit" class="registration-button" asp-action="SignUp">Registrati</button>
                 </div>
 
             </form>
