--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -94,7 +94,7 @@
                         {
                             foreach (var chat in Model.Chats)
                             {
-                                for (int i = 0; i < chat.Messages.Length; i++)
+                                for (int i = 0; i < chat.Messages.Count; i++)
                                 {
                                     var message = chat.Messages[i];
                                     if (message.Role == client.Enum.ChatRole.USER) // User message
