--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -99,7 +99,8 @@
             <div class="col-md-9 d-flex flex-column p-0">
                 <main class="content flex-grow-1">
                     <div class="chat flex-grow-1 p-3">
-                        @if (Model.SelectedChat != null){
+                        @if (Model.SelectedChat != null && Model.SelectedChat.Messages != null)
+                        {
                             for (int i = 0; i < Model.SelectedChat.Messages.Count; i++)
                             {
                                 var message = Model.SelectedChat.Messages[i];
