--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -82,7 +82,6 @@
                                         <input type="hidden" name="id" value="@chat.Id" />
                                         <button class="btn btn-primary">@chat.Title</button>
                                     </form>
-
                                 </div>
                             }
                         }
@@ -131,23 +130,13 @@
                     </div>
                 </main>
             <div/>
-                <footer class="p-3">
+                <footer>
                     <div class="input-container">
-                        @* <input title="ciao" id="fileInput" type="file" name="files" multiple class="hidden"> *@
-                        <button id="attachButton" class="attach-button" type="button" aria-haspopup="menu"
-                                aria-expanded="false" data-state="closed" data-bs-toggle="modal" data-bs-target="#fileModal">
-                            📎
-                        </button>
-                        @* <input type="text" placeholder="Invia un messaggio" class="input-field" />
-                        <button class="send-button">↥</button> *@
-
-                        @* <form asp-action="MessagePost" method="post">
-                            <input type="text" placeholder="Invia un messaggio" class="input-field"/>
-                            <button class="send-button">↥</button>
-                        </form> *@
-
                         <form asp-action="MessagePost" method="post">
-                            <input type="text" placeholder="Invia un messaggio" class="input-field" />
+                            <button id="attachButton" class="attach-button" type="button" aria-haspopup="menu" aria-expanded="false" data-state="closed" data-bs-toggle="modal" data-bs-target="#fileModal">
+                                📎
+                            </button>
+                            <input type="text" placeholder="Invia un messaggio" class="input-field"/>
                             <button class="send-button">↥</button>
                         </form>
                     </div>
@@ -176,6 +165,7 @@
             </div>
         </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     @* <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script> *@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
