--- a/client/client/wwwroot/css/site.css
+++ b/client/client/wwwroot/css/site.css
@@ -105,22 +105,23 @@ body {
 }
 
 .message {
-    background-color: #f1f1f1;
-    padding: 10px;
-    border-radius: 10px;
-    margin-bottom: 10px;
-    max-width: 70%;
-    word-wrap: break-word;
-}
-
-.response {
-    background-color: #d1ecf1;
+    background-color: #222;
     padding: 10px;
     border-radius: 10px;
     margin-bottom: 10px;
     max-width: 70%;
     word-wrap: break-word;
     align-self: flex-end;
+}
+
+.response {
+    background-color: #333;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    max-width: 70%;
+    word-wrap: break-word;
+    align-self: flex-start;
 }
 
 footer {
