Fix: migrated to dto classes

--- a/client/client/Views/Auth/Index.cshtml
+++ b/client/client/Views/Auth/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="login-container">
         <div class="login-box">
             <div class="logo">
-                <img src="img/logo_full_no_nome.svg" alt="Logo">
+            <img src="~/img/logo_full_no_nome.svg" alt="Logo">
             </div>
             <form method="post">
                 <label asp-for="Username">Nome utente</label>
