--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -54,6 +54,17 @@
         <div class="row no-gutters">
             <!-- Sidebar -->
             <div class="col-md p-25 sidebar d-none d-md-block">
+                <div class="row">
+                    <div class="col-sm w-50">
+                        <button class="sidebar-btn  w-100" id="chatBtn">Chat</button>
+                    </div>
+                    <div class="col-sm w-50">
+                        <button class="sidebar-btn  w-100" id="fileBtn">File</button>
+                    </div>
+                </div>
+    
+                <div class="sidebar-top w-100">
+
                 <form method="post" asp-action="ChatPost">
                     <div class="newChat file text-center">
                         <button class="btn" id="newChatBtn">
@@ -98,9 +109,6 @@
                         }
                     }
                 </div>
-                <div class="col-sm sidebar-buttons">
-                    <button class="sidebar-btn" id="chatBtn">C</button>
-                    <button class="sidebar-btn" id="fileBtn">F</button>
                 </div>
             </div>
             <!---------------MESSAGGI CHAT--------->
