Feat: tre puntini

--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -84,10 +84,22 @@
                             if (Model.SelectedChat != null && Model.SelectedChat.Id == chat.Id)
                             {
                                 <div class="file file-selected">
-                                    <form asp-action="ChatGetById" method="get">
+                                    <form asp-action="ChatGetById" method="get" class="form-file">
                                         <input type="hidden" name="id" value="@chat.Id" />
                                         <button class="btn btn-primary">@chat.Title</button>
+                                        <div class="dots-container">
+                                            <a>...</a>
+                                            <ul class="submenu">
+                                                <li class="submenu-item">
+                                                    <a asp-action="ChatDelete" class="submenu-link">Delete</a>
+                                                </li>
+                                                <li class="submenu-item">
+                                                    <a asp-action="ChatRename" class="submenu-link">Rename</a>
+                                                </li>
+                                            </ul>
+                                        </div>                                        
                                     </form>
+                                    
                                 </div>
                             } else
                             {
