--- a/client/client/wwwroot/css/site.css
+++ b/client/client/wwwroot/css/site.css
@@ -26,7 +26,8 @@ body {
 .sidebar-bot {
     background-color: #212121;
     height: 94vh;
-
+    overflow-y: auto;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -345,4 +346,68 @@ footer {
     margin: 5px;
     padding: 5px;
     width: 100%;
+}
+
+.logo {
+    width: 30px;
+    height: 30px;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #212121;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #666;
+    border-radius: 10px;
+}
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
+
+/*tre puntini chat*/
+.form-file{
+    display: flex;
+}
+
+.dots-container {
+    position: relative;
+    padding: 0px 20px;
+}
+
+.dots-container:hover > .submenu {
+    opacity: 1;
+    visibility: visible;
+    top: 100%;
+}
+
+.submenu {
+    position: absolute;
+    width: 250px;
+    background: #444;
+    top: 110%;
+    padding: 20px 30px;
+    -webkit-box-shadow: 0 15px 44px rgba(140, 140, 140, 0.18);
+    box-shadow: 0 15px 44px rgba(140, 140, 140, 0.18);
+    border-radius: 5px;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
+    list-style-type: none;
+}
+
+.submenu .submenu-link {
+    padding: 7px 0;
+    color: var(--heading-color);
+    font-size: 14px;
+}
+
+.submenu .submenu-link:hover {
+    color: red;
 }
