Fix: css puntini

--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
                                             <a>...</a>
                                             <ul class="submenu">
                                                 <li class="submenu-item">
-                                                    <a asp-action="ChatDelete" class="submenu-link">Delete</a>
+                                                    <a asp-action="ChatDelete" class="submenu-link text-danger ">Delete</a>
                                                 </li>
                                                 <li class="submenu-item">
                                                     <a asp-action="ChatRename" class="submenu-link">Rename</a>
@@ -126,8 +126,8 @@
                 </div>
                 </div>
             </div>
+            
             <!---------------MESSAGGI CHAT--------->
-
             <div class="col-md-9 d-flex flex-column p-0 ">
                 <main class="content flex-grow-1 ">
                     <div class="chat flex-grow-1 p-3">
