--- a/client/client/wwwroot/css/site.css
+++ b/client/client/wwwroot/css/site.css
@@ -384,11 +384,12 @@ footer {
     opacity: 1;
     visibility: visible;
     top: 100%;
+    right: -10%;
 }
 
 .submenu {
     position: absolute;
-    width: 250px;
+    width: 110px;
     background: #444;
     top: 110%;
     padding: 20px 30px;
@@ -403,11 +404,11 @@ footer {
 }
 
 .submenu .submenu-link {
+    color: gainsboro;
     padding: 7px 0;
-    color: var(--heading-color);
     font-size: 14px;
 }
 
-.submenu .submenu-link:hover {
-    color: red;
-}
+    .submenu .submenu-link:hover {
+        color: #E9CD72;
+    }
